show error message

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -27,6 +27,13 @@
             </ul>
         </nav>
     </header>
+    {{#if error}}
+    <div>
+        <div class="errorContainer">
+            <p>{{error}}</p>
+        </div>
+    </div>
+    {{/if}}
     {{{body}}}
     <footer>
         <p>Back-End 2023</p>
