--- a/views/game/create.hbs
+++ b/views/game/create.hbs
@@ -1,30 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Page - Gaming Team</title>
-    <link rel="stylesheet" href="./static/css/styles.css" />
-</head>
-
-<body>
-
-    <header class="header">
-        <nav>
-            <img src="./static/images/logo.jpg" class="logo">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">All Games Code</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Create Game Offer</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
-                <li><a href="#">Logout</a></li>
-            </ul>
-        </nav>
-    </header>
 
     <main id="create">
         <!-- In case of error, you should display div with class "errorContainer" -->
@@ -39,7 +12,7 @@
             <div class="create-container-info">
                 <h1>Create Game Code Offer</h1>
                 <h4>Post your code to sell</h4>
-                <form action="#" method="">
+                <form  method="POST">
                     <label>Platform:</label>
                     <select id="platform" name="">
                         <option value="">-------</option>
@@ -65,11 +38,3 @@
             </div>
         </section>
     </main>
-
-    <footer>
-        <p>Back-End 2023</p>
-    </footer>
-
-</body>
-
-</html>
