--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page - Gaming Team</title>
-    <link rel="stylesheet" href="./static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 
 <body>
     <header class="header">
         <nav>
-            <img src="./static/images/logo.jpg" class="logo">
+            <img src="/static/images/logo.jpg" class="logo">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="#">All Games Code</a></li>
+                <li><a href="/catalog">All Games Code</a></li>
                 
                 {{#if isAuthenticated}}
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Create Game Offer</a></li>
+                <li><a href="/search">Search</a></li>
+                <li><a href="/game/create">Create Game Offer</a></li>
                 <li><a href="/logout">Logout</a></li>
                 {{else}}
                 <li><a href="/login">Login</a></li>
