--- a/views/game/catalog.hbs
+++ b/views/game/catalog.hbs
@@ -1,29 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalog Page - Gaming Team</title>
-    <link rel="stylesheet" href="./static/css/styles.css">
-</head>
-
-<body>
-    <header class="header">
-        <nav>
-            <img src="./static/images/logo.jpg" class="logo">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">All Games Code</a></li>
-                <li><a href="#">Search</a></li>
-                <li><a href="#">Create Game Offer</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Register</a></li>
-                <li><a href="#">Logout</a></li>
-            </ul>
-        </nav>
-    </header>
 
     <main id="catalog">
         <section class="game-market">
@@ -32,7 +6,7 @@
                 <div class="game">
                     <div class="game-img">
                         <img
-                            src="./static/images/witcher-3.jpg">
+                            src="/static/images/witcher-3.jpg">
                     </div>
                     <div class="game-info">
                         <h1>The Witcher 3</h1>
@@ -46,7 +20,7 @@
                 <div class="game">
                     <div class="game-img">
                         <img
-                            src="./static/images/legacy.webp">
+                            src="/static/images/legacy.webp">
                     </div>
                     <div class="game-info">
                         <h1>Hogwarts Legacy</h1>
@@ -60,7 +34,7 @@
                 <div class="game">
                     <div class="game-img">
                         <img
-                            src="./static/images/disney-dreamlight-valley.jpg">
+                            src="/static/images/disney-dreamlight-valley.jpg">
                     </div>
                     <div class="game-info">
                         <h1>Disney Dreamlight Valley</h1>
@@ -73,7 +47,7 @@
                 </div>
                 <div class="game">
                     <div class="game-img">
-                        <img src="./static/images/mortal-kombat.png">
+                        <img src="/static/images/mortal-kombat.png">
                     </div>
                     <div class="game-info">
                         <h1>Mortal Kombat 11</h1>
@@ -90,10 +64,3 @@
             </div> -->
         </section>
     </main>
-
-    <footer>
-        <p>Back-End 2023</p>
-    </footer>
-</body>
-
-</html>
