--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,8 +15,8 @@
             <img src="/static/images/logo.jpg" class="logo">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/catalog">All Games Code</a></li>
-                
+                <li><a href="/game/catalog">All Games Code</a></li>
+
                 {{#if isAuthenticated}}
                 <li><a href="/search">Search</a></li>
                 <li><a href="/game/create">Create Game Offer</a></li>
