--- a/views/game/details.hbs
+++ b/views/game/details.hbs
@@ -14,14 +14,20 @@
             </div>
             <div class="product-btn">
                 <!--Only for registered user and author of the publication -->
+                {{#if isAuthenticated}}
+
+                {{#if isOwner }}
                 <div class="author">
                     <a href="#" class="btn-edit">Edit</a>
                     <a href="#" class="btn-delete">Delete</a>
                 </div>
 
+                {{else}}
                 <!-- Logged in user who has not yet buy this game code-->
-                <!-- <a href="#" class="btn-buy">Buy</a> -->
+                <a href="/game/{{game._id}}/buy" class="btn-buy">Buy</a>
+                {{/if}}
 
+                {{/if}}
                 <!-- Logged in user who has already buy this game code-->
                 <!-- <p class="buy-message">You have already bought this game</p> -->
             </div>
