--- a/views/game/details.hbs
+++ b/views/game/details.hbs
@@ -23,13 +23,18 @@
                 </div>
 
                 {{else}}
+                {{#if isBuyer}}
+                <!-- Logged in user who has already buy this game code-->
+                <p class="buy-message">You have already bought this game</p>
+                {{else}}
                 <!-- Logged in user who has not yet buy this game code-->
                 <a href="/game/{{game._id}}/buy" class="btn-buy">Buy</a>
                 {{/if}}
 
                 {{/if}}
-                <!-- Logged in user who has already buy this game code-->
-                <!-- <p class="buy-message">You have already bought this game</p> -->
+
+                {{/if}}
+
             </div>
         </div>
     </section>
