--- a/views/game/details.hbs
+++ b/views/game/details.hbs
@@ -18,8 +18,8 @@
 
                 {{#if isOwner }}
                 <div class="author">
-                    <a href="#" class="btn-edit">Edit</a>
-                    <a href="#" class="btn-delete">Delete</a>
+                    <a href="/game/{{game._id}}/edit" class="btn-edit">Edit</a>
+                    <a href="#/game/{{game._id}}/delete" class="btn-delete">Delete</a>
                 </div>
 
                 {{else}}
