--- a/views/game/edit.hbs
+++ b/views/game/edit.hbs
@@ -10,28 +10,23 @@
     <section id="edit-container">
         <div class="edit-container-info">
             <h1>Edit Game Code Offer</h1>
-            <form  method="POST">
+            <form method="POST">
                 <label>Platform:</label>
                 <select id="platform" name="platform">
-                    <option value="">-------</option>
-                    <option value="PC">PC</option>
-                    <option value="Nintendo">Nintendo</option>
-                    <option value="PS4">PS4</option>
-                    <option value="PS5">PS5</option>
-                    <option value="XBOX" selected>XBOX</option>
+                    {{#each platform }}
+                    <option value="{{value}}" {{#if isSelected }}selected{{/if}}>{{label}}</option>
+                    {{/each}}
                 </select>
                 <label>Name:</label>
                 <input type="text" id="name" name="name" value="{{game.name}}">
                 <label>Image:</label>
-                <input type="text" id="image" name="image"
-                    placeholder="https://image.api.playstation.com/vulcan/ap/rnd/202208/0921/dR9KJAKDW2izPbptHQbh3rnj.png">
+                <input type="text" id="image" name="image" placeholder="{{game.image}}">
                 <label>Price:</label>
-                <input type="number" id="price" name="price" value="55">
+                <input type="number" id="price" name="price" value="{{game.price}}">
                 <label>Genre:</label>
-                <input type="text" id="genre" name="genre" value="Action Role-Playing">
+                <input type="text" id="genre" name="genre" value="{{game.genre}}">
                 <label>Description:</label>
-                <textarea id="description" name="description">Hogwarts Legacy is an open-world action RPG set in the world first introduced in the Harry Potter books. Embark on a journey through familiar and new locations as you explore and discover magical beasts, customize your character and craft potions, master spell casting, upgrade talents and become the wizard you want to be.
-                    </textarea>
+                <textarea id="description" name="description">{{game.description}}</textarea>
                 <input type="submit" id="btn" value="EDIT"></input>
             </form>
         </div>
