--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,7 +18,7 @@
                 <li><a href="/game/catalog">All Games Code</a></li>
 
                 {{#if isAuthenticated}}
-                <li><a href="/search">Search</a></li>
+                <li><a href="/game/search">Search</a></li>
                 <li><a href="/game/create">Create Game Offer</a></li>
                 <li><a href="/logout">Logout</a></li>
                 {{else}}
