--- a/views/game/search.hbs
+++ b/views/game/search.hbs
@@ -14,9 +14,10 @@
             </select>
             <button type="submit" class="btn-search">Search</button>
         </form>
-
+        {{#if game }}
         <div class="search-result">
             <div class="search-list">
+
                 {{#each game}}
                 {{>game}}
                 {{/each}}
@@ -24,9 +25,11 @@
             </div>
         </div>
         </div>
+        {{else}}
+        <div class="no-match">
+            <p>No match was found!</p>
+        </div>
 
-        <!-- <div class="no-match">
-                <p>No match was found!</p>
-            </div> -->
+        {{/if}}
     </section>
 </main>
